Use Entity, EntityDefinition and EntityResolver for HTTP stubs in addition to messages - backwards compatible (#3428)
Use `Entity` `EntityDefinition` and the common resolver for these for HTTP stub response definitions and HTTP response, unifying behaviour with messaging.

---------

Co-authored-by: Robert Elliot <rob@lidalia.org.uk>